changed stream.collect to stream.tolist